--- a/9.0.x/pipeline.yaml
+++ b/9.0.x/pipeline.yaml
@@ -480,6 +480,7 @@ spec:
 
               # Cloud Pak for Data Platform (~1 1/2 hours)
               ROLE_NAME=ibm_catalogs ansible-playbook ibm.mas_devops.run_role
+              ROLE_NAME=cert_manager ansible-playbook ibm.mas_devops.run_role
               ROLE_NAME=cp4d ansible-playbook ibm.mas_devops.run_role
     - name: install-cp4d-db2
       when:
