--- a/9.0.x/pipeline.yaml
+++ b/9.0.x/pipeline.yaml
@@ -2,7 +2,7 @@
 apiVersion: tekton.dev/v1
 kind: Pipeline
 metadata:
-  name: mas-devops-deploy
+  name: mas-devops-deploy-test
   namespace: default
 spec:
   workspaces:
@@ -401,6 +401,7 @@ spec:
       timeout: "12h"
       runAfter:
         - get-tls-certs
+        - install-mas-core
       workspaces:
         - name: ws
       params:
@@ -479,8 +480,8 @@ spec:
               mkdir -p $MAS_CONFIG_DIR
 
               # Cloud Pak for Data Platform (~1 1/2 hours)
-              ROLE_NAME=ibm_catalogs ansible-playbook ibm.mas_devops.run_role
-              ROLE_NAME=cert_manager ansible-playbook ibm.mas_devops.run_role
+              #ROLE_NAME=ibm_catalogs ansible-playbook ibm.mas_devops.run_role
+              #ROLE_NAME=cert_manager ansible-playbook ibm.mas_devops.run_role
               ROLE_NAME=cp4d ansible-playbook ibm.mas_devops.run_role
     - name: install-cp4d-db2
       when:
